Finished the front end for this project (Added the last endpoints to the front end)
